2003-03-18  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/Unix/Command/_xmlsoft: remove unnecessary
	declaration of local parameters

2003-03-15  Bart Schaefer  <schaefer@zsh.org>

	* 17659, 17661: zshconfig.ac: insert config.modules processing
	into config.status, so that a full configure is not necessary
	when changing the module configuration.

2003-03-15  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/X/Command/_xrdb: remove _xrdb as superior
	completion for xrdb is provided by _x_utils

2003-03-14  Oliver Kiddle  <opk@zsh.org>

	* 18343, 18348: zshconfig.ac, Doc/Zsh/builtins.yo, Src/utils.c:
	handle \u and \U escapes for specifying unicode characters

2003-03-14  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18351: Completion/Unix/Command/_antiword: new completion for
	antiword

2003-03-13  Oliver Kiddle  <opk@zsh.org>

	* 18347: Completion/Base/Utility/_alternative: fix problems
	with having more than one ((val\:desc ...)) style action

2003-03-12  Oliver Kiddle  <opk@zsh.org>

	* 18346: Completion/Unix/Command/_cdcd, Completion/Unix/Type/_users,
	Completion/Unix/Command/_iconv, Completion/Unix/Command/_java,
	Completion/Unix/Command/_sccs, Completion/Unix/Type/_locales:
	update completions of java encodings for 1.4, GNU iconv to 2.2.5;
	fix completions of locales on Linux, complete for more commands using
	existing completions and more improvements to sccs completion

2003-03-12  Peter Stephenson  <pws@csr.com>

	* 18344: Completion/Unix/Command/_perforce: tag-order is now
	useful after 18299.

2003-03-12  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/Debian/Command/_debfoster,
	Completion/Linux/Command/_valgrind, Completion/Unix/Command/_cvs,
	Completion/Unix/Command/_global: remove initial capitalisation from
	descriptions

2003-03-11  Oliver Kiddle  <opk@zsh.org>

	* 18338: Completion/Base/Widget/_next_tags: list a single
	unambiguous match instead of inserting it
