@@ -1,3 +1,8 @@
+2003-03-18  Oliver Kiddle  <opk@zsh.org>
+
+	* 18359: Src/utils.c: fix bug from 18343 where not enough memory
+	was allocated if MB_LEN_MAX < 6
+
 2003-03-18  Doug Kearns  <djkea2@mugca.its.monash.edu.au>
 
 	* unposted: Completion/Unix/Command/_xmlsoft: remove unnecessary
